[tool.poetry]
name = "ittalks_cm"
version = "0.1.0"
description = ""
authors = ["kesha1225"]

[tool.poetry.dependencies]
python = "^3.7"
umongo = "^2.2.0"
motor = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
